--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="../src/logo/paulsplanetlogo.png" />
+    <link rel="shortcut icon" href="../src/logo/tripus.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- href="%PUBLIC_URL%/favicon.ico"
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pauls Planet _ Travel Shopping Center</title>
+    <title>Tripus _ Travel Center</title>
   </head>
   <body>
     <noscript>You can shop famous destination around the world.</noscript>
